# OGS

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: server.hpp  utility.hpp
include/sinks/: evms.hpp
source/: main.cpp  server.cpp  utility.cpp
source/sinks/: evms.cpp
